--- a/contato.html
+++ b/contato.html
@@ -74,5 +74,7 @@
     <footer>
         <p>&copy; 2023 Club de Regatas Vasco da Gama. Todos os direitos reservados.</p>
     </footer>
+    <script src="form-validation.js"></script>
+
 </body>
 </html>
