--- a/titulos.html
+++ b/titulos.html
@@ -27,7 +27,7 @@
 
     <main>
         <section class="titulos">
-            <h2>Títulos do Vasco da Gama ⚓</h2>
+            <h2>Títulos do Vasco da Gama 🏆</h2>
             <p>
                 O Vasco da Gama é um dos clubes mais vitoriosos do futebol brasileiro, com conquistas em todas as competições importantes do país e também no cenário internacional.
             </p>
