--- a/contato.html
+++ b/contato.html
@@ -69,7 +69,7 @@
             
             <h3>Outros Canais de Contato</h3>
             <p><strong>Endereço:</strong> Rua Gal Almério de Moura, 131 - Vasco da Gama, Rio de Janeiro - RJ, CEP 20921-060</p>
-            <p><strong>Telefone:</strong> +55 (63) 99290-2397</p>
+            <p><strong>Telefone:</strong> (63) 99290-2397 </p>
             <p><strong>E-mail:</strong> contato@vasco.com.br</p>
             <p><strong>Redes Sociais:</strong> @vascodagama (Instagram, Twitter, Facebook)</p>
         </section>
